--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Trébol</title>
   <base href="/">
+
+  <!-- Primary Meta Tags -->
+  <title>Trébol - The Virtual Web Store</title>
+  <meta name="title" content="Trébol - The Virtual Web Store">
+  <meta name="description" content="Trébol is an eCommerce solution aimed towards easiness of use for both customers and shopkeepers.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://trebol-ecommerce.github.io/trebol-ng/store/catalog">
+  <meta property="og:title" content="Trébol - The Virtual Web Store">
+  <meta property="og:description" content="Trébol is an eCommerce solution aimed towards easiness of use for both customers and shopkeepers.">
+  <meta property="og:image" content="">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://trebol-ecommerce.github.io/trebol-ng/store/catalog">
+  <meta property="twitter:title" content="Trébol - The Virtual Web Store">
+  <meta property="twitter:description" content="Trébol is an eCommerce solution aimed towards easiness of use for both customers and shopkeepers.">
+  <meta property="twitter:image" content="">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
